[package]
name = "llm-provider-deepseek"
version.workspace = true
edition.workspace = true
description = "DeepSeek provider integration for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-catalogue = { workspace = true }
llm-headers = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
