[package]
name = "tokn-provider-deepseek"
version.workspace = true
edition.workspace = true
description = "DeepSeek provider integration for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-auth = { workspace = true }
tokn-catalogue = { workspace = true }
tokn-headers = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
