[package]
name = "tokn-provider-openai"
version.workspace = true
edition.workspace = true
description = "OpenAI and Codex provider integration for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-auth = { workspace = true }
tokn-catalogue = { workspace = true }
tokn-headers = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokn-mock-server = { workspace = true }
