[package]
name = "llm-provider-zai"
version.workspace = true
edition.workspace = true
description = "ZAI provider integration for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-catalogue = { workspace = true }
llm-headers = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
