[package]
name = "llm-requests"
version.workspace = true
edition.workspace = true
description = "Composable request pipeline stages, profiles, and eventing for tokn"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
llm-accounts = { workspace = true }
llm-core = { workspace = true }
llm-headers = { workspace = true }
llm-config = { workspace = true }
llm-convert = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
http = { workspace = true }
tokio = { workspace = true }
