[package]
name = "llm-router"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
llm-core = { workspace = true }
llm-auth = { workspace = true }
llm-config = { workspace = true }
llm-catalogue = { workspace = true }
llm-convert = { workspace = true }
llm-headers = { workspace = true }
llm-provider-copilot = { workspace = true }
llm-provider-deepseek = { workspace = true }
llm-provider-openai = { workspace = true }
llm-provider-zai = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ipnet = { workspace = true }
parking_lot = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
rustls-native-certs = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
zstd = { workspace = true }
