[package]
name = "tokn-router"
version.workspace = true
edition.workspace = true
description = "Routing, relay, and proxy orchestration across providers for tokn gateway"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokn-core = { workspace = true }
tokn-accounts = { workspace = true }
tokn-auth = { workspace = true }
tokn-config = { workspace = true }
tokn-catalogue = { workspace = true }
tokn-convert = { workspace = true }
tokn-headers = { workspace = true }
tokn-requests = { workspace = true }
tokn-provider-copilot = { workspace = true }
tokn-provider-deepseek = { workspace = true }
tokn-provider-openai = { workspace = true }
tokn-provider-zai = { workspace = true }
anyhow = { workspace = true }
base64 = "0.22"
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
ipnet = { workspace = true }
parking_lot = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
rustls-native-certs = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smol_str = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
zstd = { workspace = true }
